[gd_scene load_steps=4 format=3 uid="uid://bjqtvbefblx2e"]

[ext_resource type="PackedScene" uid="uid://dt488rqstaeu8" path="res://Scenes/TrainWheel.tscn" id="1"]
[ext_resource type="Script" path="res://Scripts/TrainVehicle.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://cgp7ivfkt0kqu" path="res://Demo/Assets/train_car.png" id="3"]

[node name="TrainVehicle" type="Node2D"]
script = ExtResource("2")

[node name="TrainWheel" parent="." groups=["train_front_wheels"] instance=ExtResource("1")]

[node name="TrainWheel2" parent="." groups=["train_back_wheels"] instance=ExtResource("1")]

[node name="Body" type="Node2D" parent="."]
z_index = 10

[node name="Node2D" type="Node2D" parent="Body"]
z_index = 3
z_as_relative = false

[node name="ColorRect" type="ColorRect" parent="Body/Node2D"]
offset_left = -15.0
offset_top = -4.0
offset_right = -7.0
offset_bottom = 4.0
color = Color(0.133333, 0.133333, 0.133333, 1)

[node name="ColorRect2" type="ColorRect" parent="Body/Node2D"]
offset_left = 68.0
offset_top = -4.0
offset_right = 77.0
offset_bottom = 4.0
color = Color(0.133333, 0.133333, 0.133333, 1)

[node name="Node2D2" type="Node2D" parent="Body"]
z_index = 10
z_as_relative = false

[node name="TextureRect" type="TextureRect" parent="Body/Node2D2"]
offset_left = -10.0
offset_top = -12.0
offset_right = 70.0
offset_bottom = 12.0
texture = ExtResource("3")
